* Tue Mar 06 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.3-0
- Updated TMOUT setting in /etc/profile.d/simp.sh to match EL7 STIG
  setting (Reference: RHEL-07-040160)
- Added missing audispd program to simp_rsyslog::default_logs
- Added missing ' IPT:' message start to simp_ryslog::default_logs.
  This is required for iptables violation messages because some
  versions of rsyslog add a space separating the message
  timestamp/id and the message.

* Wed Dec 13 2017 Nick Markowski <nicholas.markowski@onyxpoint.com> - 2.3.3-0
- Further aligned the EL7 disa_stig profile with scap-security-guide 0.1.33-5
  - Added oval-ids to map puppet parameters to openscap tests and SIMP
    remediations.  Note this mapping is NOT complete.
- See simp/doc for a policy evaluation response report for CentOS 7
  - Includes remedies and justifications to address failures in
    the openscap scan

* Wed Nov 15 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.3-0
- Aligned the EL7 disa_stig profile with the latest SSG content
- Fixed several parameters with incorrect data types

* Mon Oct 03 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.3.2-0
- Fix discrepancies between NIST and DISA compliance profiles

* Fri Sep 22 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.3.1-0
- Refactor report generator to use a shared file format parser/compiler.
- Add vendored 'profiles-in-modules' support

* Tue Sep 19 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.1-0
- Remove test link to allow module to be published to PuppetForge

* Tue Sep 05 2017 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 2.3.0-0
- Converted compliance profiles to JSON.  This allows non-string values
  and faster deserialization.
- Provided scripts in 'utils/' to convert the compliance profiles from
  YAML to JSON and vice versa.

* Mon Jun 16 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.2.0-0
- Added a compliance enforcement hierav3 and hierav5 backend.
